--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 data.directory=/Users/jason/scratch/sensor-failure/data
+bouy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
+
 redis.host=localhost
 redis.port=6379
+
+spark.master=local[2]
+spark.partitions=5
