Checkpoint: More work...

--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -6,3 +6,10 @@ redis.port=6379
 
 spark.master=local[2]
 spark.partitions=5
+
+bootstrap.servers=localhost:9092
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serizlizer=com.ubiquibit.buoy.serialize.DefaultSerializer
+kafka.producer.retries=3
+kafka.linger.ms=3
+kafka.compression.type=snappy
