Writes to Kafka...

--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spark.partitions=5
 
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serizlizer=com.ubiquibit.buoy.serialize.DefaultSerializer
+value.serializer=com.ubiquibit.buoy.serialize.DefaultSerializer
 kafka.producer.retries=3
 kafka.linger.ms=3
 kafka.compression.type=snappy
