Big refactor with Bootstrap/Redis implemented

--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 data.directory=/Users/jason/scratch/sensor-failure/data
-bouy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
+buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 
 redis.host=localhost
 redis.port=6379
