--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 data.directory=/Users/jason/scratch/sensor-failure/data
 buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 
-redis.host=localhost
+redis.host=Flob.local
 redis.port=6379
 
-spark.master=local[2]
+spark.master=spark://Flob.local:7077
 spark.partitions=5
+#spark.sql.warehouse.dir=/Users/jason/spark-warehouse
 
-bootstrap.servers=localhost:9092
+bootstrap.servers=Flob.local:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=com.ubiquibit.buoy.serialize.DefaultSerializer
 kafka.producer.retries=3
