No with correct deserialization...
~ albeit out of order

--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -4,6 +4,7 @@ buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 redis.host=Flob.local
 redis.port=6379
 
+#spark.master=local[4]
 spark.master=spark://Flob.local:7077
 spark.partitions=5
 #spark.sql.warehouse.dir=/Users/jason/spark-warehouse
