--- a/feedkafka/src/main/resources/application.properties
+++ b/feedkafka/src/main/resources/application.properties
@@ -15,3 +15,4 @@ value.serializer=com.ubiquibit.buoy.serialize.DefaultSerializer
 kafka.producer.retries=3
 kafka.linger.ms=3
 kafka.compression.type=snappy
+stage.file=/tmp/stage/stagefile
