--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,12 @@
 #
 #
 
-data.directory=/Users/jason/scratch/sensor-failure/data
+# aka BASEDIR/data
+data.directory=/Users/jason/scratch/sensor-failure/data\
+# shouldn't need to change 
 buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 
+# your machine...
 redis.host=Flob.local
 redis.port=6379
 
