Now with output to disk.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,4 @@ kafka.producer.retries=3
 kafka.linger.ms=3
 kafka.compression.type=snappy
 stage.dir=/tmp/stage
+interrupt.writer.out.dir=/tmp/interrupt/out
