--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #
 
 # aka BASEDIR/data
-data.directory=/Users/jason/scratch/sensor-failure/data\
+data.directory=/Users/jason/scratch/sensor-failure/data
 # shouldn't need to change 
 buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 
