--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spark.master=spark://Flob.local:7077
 spark.partitions=5
 #spark.sql.warehouse.dir=/Users/jason/spark-warehouse
 
+orc.output.path=/tmp/orc
 bootstrap.servers=Flob.local:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=com.ubiquibit.buoy.serialize.DefaultSerializer
