fixing unit tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,14 @@
 #
 # This work is licensed under a
 # Creative Commons Attribution-ShareAlike 4.0 International License.
-#
+#asse
 # You should have received a copy of the license along with this
 # work.  If not, see <http://creativecommons.org/licenses/by-sa/4.0/>.
 #
 #
 
 # aka BASEDIR/data
-data.directory=/Users/jason/scratch/sensor-failure/data
+data.directory=/Users/jason/scratch
 # shouldn't need to change 
 buoy.data.subdir=/www.ndbc.noaa.gov/data/realtime2/
 
